--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import ProjectList from '../components/ProjectList.astro';
 import FilmList from '../components/FilmList.astro';
 ---
 
-<BaseLayout title="Jeffrey de Roode">
+<BaseLayout title="Jeffrey de Roode • JDR productions • Freelance Producer Rotterdam">
 	<div id="content">
 		<Hero />
 		<ProjectList />
