--- a/src/components/FilmCard.astro
+++ b/src/components/FilmCard.astro
@@ -23,7 +23,7 @@ import { fade } from 'astro:transitions';
 	<p class="text-xs md:order-3">{data.duration} mins</p>
 	<p class="text-xs md:order-5 md:col-span-2">{data.director}</p>
 	<p class="text-xs md:col-span-2">{data.role}</p>
-	<p class="text-xs md:order-4 text-right">{data.release}</p>
+	<p class="text-xs md:order-4 md:text-right">{data.release}</p>
 	<p class="text-xs md:col-span-2 md:order-last">{data.production}</p>
 </div>
 
