--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="flex flex-col h-screen z-0">
+<footer class="flex -z-10 flex-col h-screen z-0">
 	<div class="grow content-end">
 		<h1 class="text-8xl text brand leading-3" itemprop="name">
 			Jeffrey <br />de Roode
