--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
 import { Image } from 'astro:assets';
-import hero from '../assets/jdr-cover-doel-02.jpg';
+import hero from '../assets/jdr-cover-01b.jpg';
 
 const projects = (await getCollection('projects'))
 	.sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
@@ -24,7 +24,7 @@ import ProjectItem from './ProjectItem.astro';
 									width={hero.width / 2}
 									densities={[1.5, 2]}
 									alt="Hero Image"
-									class="absolute top-0 md:w-1/2 -z-10 h-full w-full object-cover"
+									class="scroll top-0 md:w-1/2  h-full w-full object-cover"
 								/>
 							}
 						</div>
