--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -35,17 +35,7 @@ const { title, description } = Astro.props;
 			addEventListener('load', () => document.documentElement.classList.add('loaded'));
 		</script>
 
-		<script
-			src="https://code.jquery.com/jquery-3.4.1.min.js"
-			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-			crossorigin="anonymous"
-		>
-		</script>
-		<!-- <script src="assets/scripts/preloader.js"></script> -->
-
-		<!-- <script src="./assets/scripts/owl.carousel.min.js"></script> -->
-		<!-- <script src="./assets/scripts/scripts.js"></script> -->
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-2966635-71"></script>
+		<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-2966635-71"></script> -->
 	</body>
 </html>
