--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -25,6 +25,7 @@ import ProjectItem from './ProjectItem.astro';
 									sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1080px) 720px, (max-width: 1440px) 960px, (max-width: 1920px) 1080px, 1920px`}
 									alt="Jeffrey de Roode"
 									class="top-0 md:w-1/2 h-full w-full object-cover"
+									loading="lazy"
 								/>
 							}
 						</div>
