--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,5 +1,6 @@
 <input id="color-mode" type="checkbox" name="color-mode" />
 <label for="color-mode" class="bottom-6 right-6 md:bottom-vw-4 md:right-vw-4">
+	<span class="sr-only">Toggle dark mode</span>
 	<span class="dark-mode-hide"></span>
 	<span class="light-mode-hide"></span>
 </label>
