--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -28,7 +28,7 @@ const {
 			title:
 				'Jeffrey de Roode is a Rotterdam based freelance producer and project manager specialized in film, documentaries and other creative concepts.',
 			type: 'Website',
-			image: '../assets/images/jdr-share.jpg',
+			image: 'https://jeffreyderoode.nl/assets/images/jdr-share.jpg',
 		},
 	}}
 	extend={{
