--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,9 @@ const currentYear = new Date().getFullYear();
 		</h2>
 	</div>
 	<div class="content about grid mt-4 grid-cols-1 gap-4 md:grid-cols-4">
-		<p class="text-5xl md:text-3xl brand md:col-span-2 text-balance">
+		<p
+			class="md:text-3xl brand md:col-span-2 text-balance leading-tighter md:leading-tighter lg:leading-tighter"
+		>
 			I'm a documentary film producer based in Rotterdam. I operate as a producer, executive
 			producer, or line producer on a freelance basis.
 		</p>
@@ -166,7 +168,7 @@ const currentYear = new Date().getFullYear();
 	.brand {
 		font-family: var(--font-brand);
 		text-transform: uppercase;
-		line-height: 80%;
+		line-height: 90%;
 	}
 
 	.credits {
