--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,7 +20,7 @@ import hero from '../assets/jdr-cover-01a.jpg';
 	<div class="flex items-center justify-center z-50 py-16 md:p-4 copy">
 		<div class="text-center flex flex-col gap-2 p-vw-2
 		 md:gap-4">
-			<p class="uppercase intro text-7xl p-2 md:text-5xl lg:text-5xl text-balance">
+			<p class="uppercase intro text-7xl p-2 md:text-5xl lg:text-5xl text-balance leading-tighter">
 				I am a Rotterdam based producer of documentaries and I work on projects that contribute to
 				making this world a better place.
 			</p>
