signature img link

--- a/src/pages/jdr-signature.astro
+++ b/src/pages/jdr-signature.astro
@@ -7,7 +7,11 @@
 	<body>
 		<div class="wrapper" style="padding:1rem 0">
 			<a href="https://jeffreyderoode.nl">
-				<img src="../assets/images/jdr-signature.png" width="192px" alt="Jeffrey de Roode" />
+				<img
+					src="https://jeffreyderoode.nl/assets/images/jdr-signature.png"
+					width="192px"
+					alt="Jeffrey de Roode"
+				/>
 			</a>
 			<div
 				class="content"
