--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -104,7 +104,7 @@ const currentYear = new Date().getFullYear();
 			</ul>
 		</div>
 	</div>
-	<div class="credits grid grid-cols-2 pv-vw-2">
+	<div class="credits grid grid-cols-2 gap-4 pv-vw-2">
 		<p class="">&copy; {currentYear} Jeffrey de Roode</p>
 		<p class="">
 			design + development <a href="https://allthis.digital" target="_blank">allthis.digital</a>
@@ -172,7 +172,7 @@ const currentYear = new Date().getFullYear();
 	}
 
 	.credits {
-		gap: var(--gapborder);
+		/* gap: var(--gapborder); */
 		font-size: 0.5rem;
 		opacity: 0.5;
 	}
