--- a/src/pages/jdr-signature.astro
+++ b/src/pages/jdr-signature.astro
@@ -15,23 +15,27 @@
 			</a>
 			<div
 				class="content"
-				style="margin-top:1rem; font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace; font-weight: normal;"
+				style="margin-top:1.5rem; font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace; font-weight: normal; text-transform:uppercase; line-height:112.5%;  "
 			>
-				<h1 style="display:none">Jeffrey de Roode</h1>
-				<div
-					class="links"
-					style="text-transform:uppercase; font-size:0.875rem; letter-spacing:0.0125em;"
-				>
-					<a href="mailto:hello@jeffreyderoode.nl">hello@jeffreyderoode.nl</a><br />
+				<div class="name" style="">
+					<h1 style="line-height:112.5%; font-weight:800">Jeffrey de Roode</h1>
+					<h2
+						style="line-height:112.5%; font-weight:400; font-size:0.875rem;   color:rgb(102, 102, 102);"
+					>
+						Producer
+					</h2>
+				</div>
+
+				<div class="links" style="margin-top:1rem; font-size:0.875rem; letter-spacing:0.0125em;">
 					<a href="tel://+310646714731">+31(0)646714731</a><br />
+					<a href="mailto:hello@jeffreyderoode.nl">hello@jeffreyderoode.nl</a><br />
 					<!-- <a href="https://jeffreyderoode.nl">jeffreyderoode.nl</a> -->
 				</div>
 				<div
 					class="legal"
-					style="text-transform:uppercase; font-size:0.675rem;  letter-spacing:0.025em; color:#666; margin-top:1rem;"
+					style="text-transform:uppercase; font-size:0.675rem;  letter-spacing:0.125em; color:rgb(102, 102, 102); margin-top:1rem;"
 				>
-					<p>KVK 68591012</p>
-					<p>BTW NL001798656B14</p>
+					<p>Goudsesingel 136 3011KD Rotterdam</p>
 				</div>
 			</div>
 		</div>
