--- a/src/components/FilmCard.astro
+++ b/src/components/FilmCard.astro
@@ -17,14 +17,15 @@ import { fade } from 'astro:transitions';
 
 <div
 	transition:animate={fade({ duration: '0.4s' })}
-	class="grid filmcard md:grid-cols-6 gap-x-4 grid-cols-2"
+	class="grid box filmcard md:grid-cols-6 gap-x-4 grid-cols-2 items-baseline"
 >
-	<h3 class="text-xl/tight md:col-span-2">{data.title}</h3>
-	<p class="text-xs md:order-3">{data.duration} mins</p>
+	<h3 class="text-xl/tight col-span-2 leading-normal">{data.title}</h3>
 	<p class="text-xs md:order-5 md:col-span-2">{data.director}</p>
-	<p class="text-xs md:col-span-2">{data.role}</p>
-	<p class="text-xs md:order-4 md:text-right">{data.release}</p>
+	<p class="text-xs md:order-3">{data.duration} mins</p>
 	<p class="text-xs md:col-span-2 md:order-last">{data.production}</p>
+	<p class="text-xs md:col-span-2">{data.role}</p>
+
+	<p class="text-xs md:order-4 md:text-right">{data.release}</p>
 </div>
 
 <style>
