--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ const currentYear = new Date().getFullYear();
 	</div>
 	<div class="content about grid mt-4 grid-cols-1 gap-4 md:grid-cols-4">
 		<p
-			class="md:text-3xl brand md:col-span-2 text-balance leading-tighter md:leading-tighter lg:leading-tighter"
+			class="md:text-3xl text-3xl brand md:col-span-2 text-balance leading-tighter md:leading-tighter lg:leading-tighter"
 		>
 			I'm a documentary film producer based in Rotterdam. I operate as a producer, executive
 			producer, or line producer on a freelance basis.
