--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ import hero from '../assets/jdr-cover-01a.jpg';
 	>
 		<Image
 			src={hero}
-			widths={[720, 960, 1920, hero.width]}
+			widths={[720, 960, 1920, 2560]}
 			sizes={`(max-width: 360px) 720px, (max-width: 720px) 960px, (max-width: 1600px) 1920px, 2560px`}
 			alt="Jeffrey de Roode"
 			class="top-0 h-full w-full object-cover"
