--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -9,8 +9,8 @@ interface Props {
 }
 
 const {
-	title = 'Jeffrey de Roode • JDR productions • Freelance Producer Rotterdam',
-	description = 'Jeffrey de Roode is a Rotterdam based freelance producer and project manager specialized in film, documentaries and other creative concepts.',
+	title = 'Jeffrey de Roode • Freelance Producer',
+	description = 'Jeffrey de Roode is a Rotterdam based freelance producer specialized in documentaries.',
 } = Astro.props;
 ---
 
@@ -26,7 +26,7 @@ const {
 	openGraph={{
 		basic: {
 			title:
-				'Jeffrey de Roode is a Rotterdam based freelance producer and project manager specialized in film, documentaries and other creative concepts.',
+				'Jeffrey de Roode is a Rotterdam based freelance producer specialized in documentaries.',
 			type: 'Website',
 			image: 'https://jeffreyderoode.nl/assets/images/jdr-share.jpg',
 		},
