--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -110,10 +110,12 @@ const { imgs: images, img_alts: imageAlts, role, type, title } = entry.data;
 	}
 
 	h2 {
-		font-family: var(--font-body);
+		font-family: var(--font-mono);
 		font-weight: 600;
 		font-optical-sizing: auto;
 		letter-spacing: -0.0325rem;
+		line-height: 112.5%;
+		text-transform: none;
 	}
 
 	.meta {
