--- a/src/pages/jdr-signature.astro
+++ b/src/pages/jdr-signature.astro
@@ -9,33 +9,34 @@
 			<a href="https://jeffreyderoode.nl">
 				<img
 					src="https://jeffreyderoode.nl/assets/images/jdr-signature.png"
-					width="192px"
+					width="160px"
 					alt="Jeffrey de Roode"
 				/>
 			</a>
 			<div
 				class="content"
-				style="margin-top:1.5rem; font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace; font-weight: normal; text-transform:uppercase; line-height:112.5%;  "
+				style="margin-top:1.5rem; font-size:0.875rem font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace; font-weight: normal; text-transform:uppercase; line-height:112.5%;  "
 			>
 				<div class="name" style="">
-					<h1 style="line-height:112.5%; font-weight:800">Jeffrey de Roode</h1>
-					<h2
-						style="line-height:112.5%; font-weight:400; font-size:0.875rem;   color:rgb(102, 102, 102);"
-					>
-						Producer
-					</h2>
+					<h1 style="line-height:125%; font-weight:700; letter-spacing:0.0125em;">
+						Jeffrey de Roode
+					</h1>
+					<h2 style="line-height:125%; font-weight:500;  color:rgb(102, 102, 102);">Producer</h2>
 				</div>
 
-				<div class="links" style="margin-top:1rem; font-size:0.875rem; letter-spacing:0.0125em;">
-					<a href="tel://+310646714731">+31(0)646714731</a><br />
-					<a href="mailto:hello@jeffreyderoode.nl">hello@jeffreyderoode.nl</a><br />
-					<!-- <a href="https://jeffreyderoode.nl">jeffreyderoode.nl</a> -->
+				<div
+					class="links"
+					style="margin-top:1rem; line-height:125%; font-weight:500;  letter-spacing:0.0125em;"
+				>
+					<a href="tel://+310646714731" style=" font-weight:700;">+31(0)646714731</a><br />
+					<!-- <a href="mailto:hello@jeffreyderoode.nl">hello@jeffreyderoode.nl</a><br /> -->
+					<a href="https://jeffreyderoode.nl">jeffreyderoode.nl</a>
 				</div>
 				<div
 					class="legal"
-					style="text-transform:uppercase; font-size:0.675rem;  letter-spacing:0.125em; color:rgb(102, 102, 102); margin-top:1rem;"
+					style="text-transform:uppercase;  line-height:125%; font-weight:500;  color:rgb(102, 102, 102); margin-top:1rem;"
 				>
-					<p>Goudsesingel 136 3011KD Rotterdam</p>
+					<p>Goudsesingel 136 <br />3011KD Rotterdam</p>
 				</div>
 			</div>
 		</div>
