--- a/src/pages/jdr-signature.astro
+++ b/src/pages/jdr-signature.astro
@@ -158,7 +158,7 @@
 				.mobile_link a[href^='tel'],
 				.mobile_link a[href^='sms'] {
 					text-decoration: default;
-					color: orange !important; /* or whatever your want */
+					color: #000 !important; /* or whatever your want */
 					pointer-events: auto;
 					cursor: default;
 				}
@@ -177,7 +177,7 @@
 				.mobile_link a[href^='tel'],
 				.mobile_link a[href^='sms'] {
 					text-decoration: default;
-					color: orange !important;
+					color: #000 !important;
 					pointer-events: auto;
 					cursor: default;
 				}
