--- a/src/pages/jdr-signature.astro
+++ b/src/pages/jdr-signature.astro
@@ -225,7 +225,7 @@
 				<a href="https://jeffreyderoode.nl">
 					<img
 						src="https://jeffreyderoode.nl/assets/images/jdr-signature.png"
-						width="160px"
+						width="192px"
 						alt="Jeffrey de Roode"
 					/>
 				</a>
@@ -233,12 +233,12 @@
 					class="content"
 					style="margin-top:1.5rem; font-size:0.875rem font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace; font-weight: normal; text-transform:uppercase; line-height:112.5%;  "
 				>
-					<div class="name" style="">
+					<!-- <div class="name" style="">
 						<h1 style="line-height:125%; font-weight:700; letter-spacing:0.0125em;">
 							Jeffrey de Roode
 						</h1>
 						<h2 style="line-height:125%; font-weight:500;  color:rgb(102, 102, 102);">Producer</h2>
-					</div>
+					</div> -->
 
 					<div
 						class="links"
@@ -252,7 +252,7 @@
 						class="legal"
 						style="text-transform:uppercase;  line-height:125%; font-weight:500;  color:rgb(102, 102, 102); margin-top:1rem;"
 					>
-						<p>Goudsesingel 136 <br />3011KD Rotterdam</p>
+						<p>Goudsesingel 136 <br />3011 KD Rotterdam</p>
 					</div>
 				</div>
 			</div>
