button hover shit

--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -104,6 +104,11 @@ const { imgs: images, img_alts: imageAlts, role, type, title } = entry.data;
 		--text: black;
 	}
 
+	.project__item:hover > .preview {
+		background: var(--clr-brand);
+		--text: black;
+	}
+
 	.project__item:hover .marquee {
 		visibility: visible;
 		opacity: 1;
