--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -70,7 +70,7 @@ const { imgs: images, img_alts: imageAlts, role, type, title } = entry.data;
 			<div class="flex info">
 				<Content />
 			</div>
-			<div class="flex hidden md:block gap-4 links">
+			<div class="hidden md:flex gap-4 links">
 				<a href="#" class="grow close">close</a>
 				<!-- <a href="#" class="grow">trailer</a> -->
 			</div>
