--- a/src/components/FilmList.astro
+++ b/src/components/FilmList.astro
@@ -43,6 +43,7 @@ const { data } = await res.json();
 	}
 	.box {
 		transform: translateY(12rem);
+		opacity: 0;
 	}
 </style>
 
@@ -54,10 +55,10 @@ const { data } = await res.json();
 		(info) => {
 			animate(
 				'.box',
-				{ transform: ['translateY(0)'] },
+				{ transform: ['translateY(0)'], opacity: ['1'] },
 				{
 					delay: stagger(0.125),
-					duration: 2,
+					duration: 1,
 					easing: [0.22, 0.03, 0.26, 1],
 				}
 			);
