--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,25 +4,25 @@ const currentYear = new Date().getFullYear();
 
 <footer class="flex flex-col h-screen z-0">
 	<div class="grow content-end">
-		<h2 class="text-8xl text brand leading-3" itemprop="name">
+		<h2 class="text-9xl md:text-8xl text brand leading-3" itemprop="name">
 			Jeffrey <br />de Roode
 		</h2>
 	</div>
 	<div class="content about grid mt-4 grid-cols-1 gap-4 md:grid-cols-4">
 		<p
-			class="md:text-3xl text-3xl brand md:col-span-2 text-balance leading-tighter md:leading-tighter lg:leading-tighter"
+			class="md:text-3xl text-4xl brand md:col-span-2 text-balance leading-tighter md:leading-tighter lg:leading-tighter"
 		>
 			I'm a documentary film producer based in Rotterdam. I operate as a producer, executive
 			producer, or line producer on a freelance basis.
 		</p>
-		<p class="text-balance">
+		<p class="text-balance leading-spacious">
 			Following a career in retail and a decade of travelling the world, I felt it was time for a
 			career change. After I quit my job, sold my stuff and travelled some more, I found my calling
 			in the film industry. My experience spans from passion projects, student films and shorts, to
 			commercials, corporate videos and brand movies for all kinds of commercial and non-profit
 			organisations. Ultimately, I gravitated towards documentaries, where I feel most fulfilled.
 		</p>
-		<p class="text-balance">
+		<p class="text-balance leading-spacious">
 			I engage in projects aligned with my values, collaborating with like minded individuals who
 			share a vision that echoes the essence of my love for travelling: to broaden horizons, shift
 			perspectives, and contribute to making this world a better place.
