--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,9 +5,11 @@ import { Picture } from 'astro:assets';
 import hero from '../assets/jdr-cover-01a.jpg';
 ---
 
-<header class="sticky top-0 z-10 flex flex-col h-screen md:h-svh md:grid md:grid-cols-2">
+<header
+	class="sticky top-0 z-10 flex flex-col h-screen grid-rows-7 md:h-svh md:grid md:grid-cols-2"
+>
 	<div
-		class="relative flex items-center justify-center h-full bg-center bg-cover visual md:h-screen"
+		class="relative flex items-center justify-center row-span-4 h-full bg-center bg-cover visual md:h-screen"
 	>
 		<Image
 			src={hero}
@@ -18,7 +20,7 @@ import hero from '../assets/jdr-cover-01a.jpg';
 		/>
 	</div>
 
-	<div class="flex items-center justify-center z-50 py-16 md:p-4 copy">
+	<div class="flex items-center justify-center z-50 row-span-3 py-8 md:p-4 copy">
 		<div class="text-center flex flex-col gap-2 p-vw-2
 		 md:gap-4">
 			<p class="uppercase intro text-7xl p-2 md:text-5xl lg:text-5xl text-balance leading-tighter">
