--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,10 +6,10 @@ import hero from '../assets/jdr-cover-01a.jpg';
 ---
 
 <header
-	class="sticky top-0 z-10 flex flex-col h-screen grid-rows-7 md:h-svh md:grid md:grid-cols-2"
+	class="sticky top-0 z-10 flex flex-col h-screen grid-rows-8 md:h-svh md:grid md:grid-cols-2"
 >
 	<div
-		class="relative flex items-center justify-center row-span-4 h-full bg-center bg-cover visual md:h-screen"
+		class="relative flex items-center justify-center h-full bg-center bg-cover visual md:h-screen"
 	>
 		<Image
 			src={hero}
@@ -20,10 +20,10 @@ import hero from '../assets/jdr-cover-01a.jpg';
 		/>
 	</div>
 
-	<div class="flex items-center justify-center z-50 row-span-3 py-8 md:p-4 copy">
-		<div class="text-center flex flex-col gap-2 p-vw-2
+	<div class="flex items-center justify-center z-50 row-span-4 py-2 md:p-4 copy">
+		<div class="text-center flex flex-col gap-2 py-12 md:p-vw-2
 		 md:gap-4">
-			<p class="uppercase intro text-7xl p-2 md:text-5xl lg:text-5xl text-balance leading-tighter">
+			<p class="uppercase intro text-7xl md:text-5xl lg:text-5xl text-balance leading-tighter">
 				I am a Rotterdam based producer of documentaries and I work on projects that contribute to
 				making this world a better place.
 			</p>
