--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,23 +5,19 @@ import { Picture } from 'astro:assets';
 import hero from '../assets/jdr-cover-01a.jpg';
 ---
 
-<header
-	class="sticky top-0 z-10 flex flex-col h-screen grid-rows-8 md:h-svh md:grid md:grid-cols-2"
->
-	<div
-		class="relative flex items-center justify-center h-full bg-center bg-cover visual md:h-screen"
-	>
+<header class="sticky top-0 z-10 flex flex-col md:flex-row h-screen">
+	<div class="flex-1 flex items-center justify-center overflow-hidden">
 		<Image
 			src={hero}
 			alt="Jeffrey de Roode"
 			widths={[240, 960, 1920]}
 			sizes="(max-width: 360px) 240px, (max-width: 720px) 960px, (max-width: 1600px) 1920px, 100vw"
-			class="top-0 h-full w-full object-cover"
+			class="w-full h-full max-h-full object-cover"
 		/>
 	</div>
 
-	<div class="flex items-center justify-center z-50 row-span-4 py-2 md:p-4 copy">
-		<div class="text-center flex flex-col gap-2 py-12 md:p-vw-2
+	<div class="flex md:flex-1 items-center justify-center z-50 row-span-4 py-4 md:p-4 copy">
+		<div class="text-center flex flex-col gap-2 py-8 md:p-vw-2
 		 md:gap-4">
 			<p class="uppercase intro text-7xl md:text-5xl lg:text-5xl text-balance leading-tighter">
 				I am a Rotterdam based producer of documentaries and I work on projects that contribute to
