--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,7 +17,7 @@ import hero from '../assets/jdr-cover-01a.jpg';
 	</div>
 
 	<div class="flex md:flex-1 items-center justify-center z-50 row-span-4 py-4 md:p-4 copy">
-		<div class="text-center flex flex-col gap-2 py-8 md:p-vw-2
+		<div class="text-center flex flex-col gap-2 py-8 pb-12 md:p-vw-2
 		 md:gap-4">
 			<p class="uppercase intro text-7xl md:text-5xl lg:text-5xl text-balance leading-tighter">
 				I am a Rotterdam based producer of documentaries and I work on projects that contribute to
