--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@ import { Picture } from 'astro:assets';
 import hero from '../assets/jdr-cover-01a.jpg';
 ---
 
-<header class="sticky top-0 z-10 flex flex-col md:flex-row h-screen">
+<header class="sticky top-0 z-10 flex flex-col md:grid md:grid-cols-2 h-screen">
 	<div class="flex-1 flex items-center justify-center overflow-hidden">
 		<Image
 			src={hero}
@@ -16,7 +16,7 @@ import hero from '../assets/jdr-cover-01a.jpg';
 		/>
 	</div>
 
-	<div class="flex md:flex-1 items-center justify-center z-50 row-span-4 py-4 md:p-4 copy">
+	<div class="flex items-center justify-center z-50 row-span-4 py-4 md:p-4 copy">
 		<div class="text-center flex flex-col gap-2 p-4 pb-12 md:p-vw-2
 		 md:gap-4">
 			<p class="uppercase intro text-7xl md:text-5xl lg:text-5xl text-balance leading-tighter">
