Update dependencies and assets; remove outdated project entries

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,11 +2,11 @@
 const currentYear = new Date().getFullYear();
 import { Image } from 'astro:assets';
 import { Picture } from 'astro:assets';
-import hero from '../assets/jdr-cover-01a.jpg';
+import hero from '../assets/2025-12-11_HIG_0497.jpg';
 ---
 
 <header class="sticky top-0 z-10 flex flex-col md:grid md:grid-cols-2 h-screen">
-	<div class="flex-1 flex items-center justify-center overflow-hidden">
+	<div class="flex-1 flex items-center justify-center overflow-hidden md:h-[100dvh]">
 		<Image
 			src={hero}
 			alt="Jeffrey de Roode"
