--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -109,7 +109,7 @@ const { imgs: images, img_alts: imageAlts, role, type, title } = entry.data;
 		transform: scale(1.2) rotate(-8deg) translateY(-5%);
 	}
 
-	.project__item:nth-last-child(1):nth-child(odd) {
+	.project__item:nth-last-child(1) {
 		grid-column: 1/-1;
 		/* z-index: 15; */
 	}
