--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
 import { Image } from 'astro:assets';
-import hero from '../assets/jdr-cover-01b.jpg';
+import hero from '../assets/2025-12-11_HIG_0445.jpg';
 
 const projects = (await getCollection('projects'))
 	.sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
